--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
 [build]
   command = "npm install && npm run build"
   functions = "functions"
+
+[[redirects]]
+  from = "/.netlify/functions/server"
+  to = "/"
+  headers = {X-From = "Kevin's 1st homework"}
