--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,5 @@
 [build]
-  command = "npm install && npm run build"
   functions = "functions"
 
-[[redirects]]
-  from = "/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
-  headers = {X-From = "Kevin's 1st homework"}
+[dev]
+  publish = "dist"
